--- a/app/Resources/views/groups/all_groups.html.twig
+++ b/app/Resources/views/groups/all_groups.html.twig
@@ -1,4 +1,4 @@
-<div id="group_all_groups" class="group"
+<div id="group_all_groups" class="group {% if not visibleGroups.group_all_groups %}hidden{% endif %}"
      data-url="{{ path('groups', {'type': 'all'}) }}">
 
     <section class="background_purple sort">
