Raised cookie lifetime, also removed redundant class

--- a/app/Resources/views/popups/new_group.html.twig
+++ b/app/Resources/views/popups/new_group.html.twig
@@ -2,7 +2,7 @@
 
     <div class="new_group_modal">
         <header>
-            <a id="new_group_close" href="#" class="close_modal"><i class="fa fa-times"></i></a>
+            <a id="new_group_close" href="#" class="close_modal close-modal"><i class="fa fa-times"></i></a>
             <p>{{ 'NEW GROUP'|trans }}</p>
         </header>
 
