--- a/app/Resources/views/popups/group_details.html.twig
+++ b/app/Resources/views/popups/group_details.html.twig
@@ -29,7 +29,7 @@
                 {{ form_end(form) }}
             {% endif %}
 
-            {% if is_granted('EDIT', group) %}
+            {% if is_granted('EDIT_DETAILS', group) %}
             <section id="group_deletion_confirmation" class="hidden">
                 <form action="" method="post">
                     <p>{{ 'Deze groep verwijderen?'|trans }}</p>
@@ -90,21 +90,25 @@
 
     {% if is_granted('EDIT', group) %}
         <ul class="icons right">
-            <li>
-                <a id="edit_group_link" href="#">
-                    <i class="fa fa-edit"></i>
-                </a>
-            </li>
+            {% if is_granted('EDIT_DETAILS', group) %}
+                <li>
+                    <a id="edit_group_link" href="#">
+                        <i class="fa fa-edit"></i>
+                    </a>
+                </li>
+            {% endif %}
             <li>
                 <a id="download_group_link" href="{{ path('group_export_members', {'id': group.id}) }}">
                     <i class="fa fa-download"></i>
                 </a>
             </li>
-            <li>
-                <a id="delete_group_link" href="#">
-                    <i class="fa fa-trash"></i>
-                </a>
-            </li>
+            {% if is_granted('EDIT_DETAILS', group) %}
+                <li>
+                    <a id="delete_group_link" href="#">
+                        <i class="fa fa-trash"></i>
+                    </a>
+                </li>
+            {% endif %}
         </ul>
     {% endif %}
 
